# sigil-stitch

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
doc/: book.toml  sigil_quote.md
docs/: book.toml
examples/: bash_codegen.rs  c_codegen.rs  cpp_codegen.rs  csharp_codegen.rs  dart_codegen.rs  go_codegen.rs  haskell_codegen.rs  java_codegen.rs  js_codegen.rs  kotlin_codegen.rs  lua_codegen.rs  macro_features.rs  meta_programming.rs  multi_language_project.rs  ocaml_codegen.rs  python_codegen.rs  ruby_codegen.rs  rust_codegen.rs  scala_codegen.rs  swift_codegen.rs  typescript_codegen.rs  typescript_hello_world.rs
macros/: Cargo.toml
macros/src/: codegen.rs  lib.rs  parse.rs
macros/src/parse/: annotate.rs  brace_classifier.rs  format.rs  format_tests.rs  mod.rs  spacing.rs  statements.rs  statements_tests.rs  stmt_rewrite.rs  types.rs  util.rs
src/: code_block.rs  code_node.rs  code_renderer.rs  code_template.rs  error.rs  import.rs  import_collector.rs  lib.rs  name_allocator.rs  testing.rs  type_name.rs
tests/: annotation_spec_tests.rs  assert_quote_tests.rs  c_lang_tests.rs  constructor_spec_tests.rs  cpp_lang_tests.rs  dart_lang_tests.rs  edge_case_tests.rs  fun_spec_tests.rs  go_lang_tests.rs  golden.rs  haskell_lang_tests.rs  import_spec_tests.rs  java_lang_tests.rs  kotlin_lang_tests.rs  macro_tests.rs  ocaml_lang_tests.rs  phase2_c_tests.rs  phase2_cpp_tests.rs  phase2_dart_tests.rs  phase2_go_tests.rs  phase2_haskell_tests.rs  phase2_java_tests.rs  phase2_kotlin_tests.rs  phase2_ocaml_tests.rs  phase2_python_tests.rs  phase2_rust_tests.rs  (+11 more)
(+540 files in other folders)
