[package]
name = "sigil-stitch-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Proc macros for sigil-stitch code generation"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
