[package]
name = "sigil-stitch-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for sigil-stitch code generation"
keywords = ["codegen", "macros", "sigil-stitch"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
